css/ui.css
.Entity {
  position: absolute;
  top: 0;
  left: 0;
}

* {
  // Force gecko active layers
  perspective: 15px;
  -moz-perspective: 15px;
  // Force webkit active layers
  -webkit-backface-visibility: hidden;
}

html, body {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow: hidden;
  color: #fff;
}

.Bounds {
}

.lifeBar {
  position: absolute;
}

#bg1 {
  position: absolute;
  width: 10000px;
  height: 10000px;
  background-image: url('../images/bg/layer1.png');
}

#bg2 {
  position: absolute;
  width: 10000px;
  height: 10000px;
  background-image: url('../images/bg/layer2.png');
}

#bg3 {
  position: absolute;
  width: 10000px;
  height: 10000px;
  background-image: url('../images/bg/layer3.png');
}

#player {
}

.hitbox {
  position: absolute;
  background: rgba(200, 0, 0, 0.5);
}

.Level {
  position: absolute;
  width: 100%;
  height: 100%;
}

#background {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -99;
}

#hud {
  position: fixed;
  top: 10px;
  bottom: 10px;
  left: 10px;
  right: 10px;
  z-index: 100;
  visibility: hidden;
}

#hud.on {
  visibility: visible;
}

.hud-element.button {
  text-align: center;
  font-family: 'VT323', cursive;
  font-size: 2em;
}

.hud-element .button {
  text-align: center;
  font-family: 'VT323', cursive;
  font-size: 2em;
  background-image: url('../images/hud/keyBox.png');
  width: 50px;
  height: 50px;
  line-height: 50px;
  background-repeat: no-repeat;
  background-size: contain;
  background-position: 0 0;
  border-radius: 10px;
}

.hud-element .button.on {
  background-color: rgba(0, 100, 0, 0.8);
}

.hud-element .front {
  position: absolute;
  z-index: 2;
}

.hud-element .back {
  position: absolute;
  z-index: 1;
}

.hud-element {
  position: absolute;
  opacity: 0.8;
}

.hud-element.speed {
  width: 55px;
  height: 300px;
  bottom: -125px;
  left: 50%;
}

.hud-element.speed .meter-container {
  width: 55px;
  height: 300px;
  margin-left: -25px;
  -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
      -ms-transform: rotate(90deg);
       -o-transform: rotate(90deg);
          transform: rotate(90deg);
}

.hud-element.speed .front {
  width: 100%;
  background-image: url('../images/hud/boosterBarSmallFull.png');
  background-size: 55px 300px;
  background-position: 0 50%;
  background-repeat: no-repeat;
  top: 10%;
  height: 80%;
}

.hud-element.speed .back {
  width: 100%;
  height: 100%;
  background-size: 100% 100%;
  background-position: 0 50%;
  background-repeat: no-repeat;
  background-image: url('../images/hud/boosterBarSmallEmpty.png');
}

.hud-element.speed .buttons {
  position: absolute;
  top: 150px;
}

.hud-element.speed .button {
  position: absolute;
  top: -25px;
}


.hud-element.speed .button:nth-child(1) {
  left: 180px;
}

.hud-element.speed .button:nth-child(2) {
  right: 180px;
}

.hud-element.thruster,
.hud-element.thruster {
  width: 60px;
  height: 300px;
}

.hud-element.thruster .front,
.hud-element.thruster .back {
  bottom: 0;
  width: 60px;
  height: 300px;
  background-size: 60px 300px;
}

.hud-element.thruster > div {
  width: 100%;
  height: 100%;
  background-position: 0 100%;
}

.hud-element.thruster .front {
  background-image: url('../images/hud/boosterBarSmallFull.png');
  -webkit-transition: 0.1s height;
     -moz-transition: 0.1s height;
      -ms-transition: 0.1s height;
       -o-transition: 0.1s height;
          transition: 0.1s height;
}

.hud-element.thruster .back {
  background-image: url('../images/hud/boosterBarSmallEmpty.png');
}

.hud-element.thruster.left {
  left: 0;
  bottom: 0;
}

.hud-element.thruster.right {
  right: 0;
  bottom: 0;
}

.hud-element.thruster .button {
  position: absolute;
  top: 20px;
  line-height: 50px;
  -webkit-transition: 0.1s background-color;
     -moz-transition: 0.1s background-color;
      -ms-transition: 0.1s background-color;
       -o-transition: 0.1s background-color;
          transition: 0.1s background-color;
}

.hud-element.thruster.left .button {
  right: -55px;
}

.hud-element.thruster.left .button:nth-child(2) {
  top: 80px;
}

.hud-element.thruster.right .button {
  left: -55px;
}

.hud-element.thruster.right .button:nth-child(2) {
  top: 80px;
}

.hud-element.weapon-1 {
  top: 0;
  left: 50%;
}

.hud-element.weapon-1 .button {
  position: relative;
  top: 20px;
}

.hud-element.weapon-1 .front {
  left: 45px;
  width: 90px;
  height: 200px;
  background-image: url('../images/hud/missleFull.png');
  background-repeat: no-repeat;
  background-size: 50% 50%;
  -webkit-transition: 0.1s height;
     -moz-transition: 0.1s height;
      -ms-transition: 0.1s height;
       -o-transition: 0.1s height;
          transition: 0.1s height;
}

.hud-element.weapon-1 .back {
  left: 45px;
  width: 90px;
  height: 200px;
  background-image: url('../images/hud/missleEmpty.png');
  background-repeat: no-repeat;
  background-size: 50% 50%;
}

.hud-element.weapon-2 {
  top: 0;
  right: 50%;
}

.hud-element.weapon-2 .button {
  position: relative;
  top: 20px;
}

.hud-element.weapon-2 .button {
}

.hud-element.weapon-2 .front {
  left: -65px;
  width: 129px;
  height: 200px;
  background-image: url('../images/hud/lasersFull.png');
  -webkit-transition: 0.1s height;
     -moz-transition: 0.1s height;
      -ms-transition: 0.1s height;
       -o-transition: 0.1s height;
          transition: 0.1s height;
  background-repeat: no-repeat;
  background-size: 50% 50%;
}

.hud-element.weapon-2 .back {
  left: -65px;
  width: 129px;
  height: 200px;
  background-image: url('../images/hud/lasersEmpty.png');
  background-repeat: no-repeat;
  background-size: 50% 50%;
}

.hud-element.power {
  left: 0;
  top: 0;
  width: 100px;
  height: 100px;
  line-height: 100px;
  background-image: url('../images/hud/power.png');
  background-position: 0 0;
  background-size: 100% 100%;
}

.hud-element.shield {
  right: -5px;
  top: -5px;
  width: 120px;
  height: 120px;
  line-height: 120px;
  background-image: url('../images/hud/shields.png');
  background-position: 0 0;
  background-size: 100% 100%;
}

.hud-element.console {
  width: 40%;
  height: 20%;
  bottom: 5%;
  right: 50%;
  margin-right: -20%;
  overflow: hidden;
  background-color: rgba(120, 120, 120, 0.8);
}

.hud-element.console > .textarea {
  position: absolute;
  top: 0px;
  left: 1px;
  right: 1px;
  padding: 3px;
  bottom: -10px;
  background: transparent;
  color: #bbb;
  overflow: hidden;
  font-family: courier;
  font-size: 8pt;
  border: 1px solid #bbb;
}

